# Git

./: .gitignore  .mcp.json  AGENTS.md  BLK7ARCHv1.0.sh  BLK7ARCHv1_0.sh  BLK7RCH.sh  BLK7rch_Architecture_Plan_and_Prompt.md  BLK7rch_Fix_Plan_and_Code_Prompt.md  CLAUDE.md  CV-AOPS.html  IC_Atividades_03_04.docx  IC_Atividades_03_04.md  LTX-Video-Mastery-Guide.md  README.md  README_BLK7RCHv3.0.md  Revisao.md  SECURITY_REPORT.md  _config.yml  adv7ProTools_plan_prompt.md  adv7YT.txt  adv7YT_plan_prompt.md  crowley.md  ex04.py  index.md  scrapy_url_downloader.py  test_blk7rch.sh  test_detailed.sh  tst.py  unify_wordlists.sh
.claude/: .fuse_hidden000003c300000031  .fuse_hidden000006bc00000054  settings.local.json
.claude/agents/: aops-dev.md
.codex/agents/: aops-dev.toml
.github/: copilot-instructions.md
.github/workflows/: adv7yt-publish.yml  pages.yml
.mimocode/plans/: 1782509787309-cosmic-falcon.md
.obsidian/: graph.json  workspace.json
Aula29.04/: ex03.py
HTB/Cyber_Jr/: Introduction To Networking.md  Introduction_Bash_Scripting.md  Linux Fundamentals.md  Structure_InfoSec.md
IC01-aops/ADV7ia/: .aops-vault.toml  README.md  pyproject.toml
IC01-aops/ADV7ia/.tmp/: archlinux-40s.ppm  archlinux-domain.pre-fix.xml
IC01-aops/ADV7ia/adv7ia_control/: reconcile_apply.py  reconcile_models.py  reconcile_support.py  session_alerts.py  store.py
IC01-aops/ADV7ia/deploy/openhands/: compose.yaml
IC01-aops/ADV7ia/deploy/systemd-user/: adv7ia-caddy-lan-proxy.service  openhands-docker-proxy.service
IC01-aops/ADV7ia/docs/: AIDER_TEST_SOURCE_README.md  CLINE_LOCAL_OK.md  OPENCODE_LOCAL_OK.md
IC01-aops/ADV7ia/tests/: validate-control-mesh.sh
IC01-aops/ADV7ia/tools/: ai-stack-status  audit-local-ai-stack  control_mesh.py  mcp-filesystem-aider-test  query-aider-test-rag
IC01-aops/ADV7ia/vault/Dashboards/: ADV7ia Vault Home.md
IC01-aops/ADV7ia/vault/Operations/: Session Ledger.md
IC01-aops/IPS_IDS/: ADV7Sec_1.0v.py  PHASE2_TUNING.md
IC01-aops/OpenB0X/: OpenB0X.docx  OpenB0X.html  OpenB0X.md  README.md
IC01-aops/OpenBox0.1v/: .aops-vault.toml  CHANGELOG.md  README.md  install.sh
JustVibing/Prompt/: script-loop.md
KALInit/: nwscpt.py  nwscpt.sh  nwscptPY.sh  wsl-android.sh
ObsidianAgent/: .aops-vault.toml  AGENTS.md  CLAUDE.md  README.md
ObsidianAgent/Projects/CalculadoraSite/: .gitignore  CERTIFICACAO.md  CHANGELOG.md  CLAUDE.md  CalculadoraSite.py  README.md  pyproject.toml  requirements.txt
ObsidianAgent/Projects/CalculadoraSite/calculadora_site/: __init__.py  cli.py  formatting.py
ObsidianAgent/Projects/CalculadoraSite/calculadora_site/config/: precos.yaml
ObsidianAgent/Projects/CalculadoraSite/calculadora_site/core/: __init__.py  catalog.py  models.py  pricing.py
ObsidianAgent/Projects/CalculadoraSite/calculadora_site/reports/: __init__.py  json_export.py  pdf_report.py  txt_export.py
ObsidianAgent/Projects/CalculadoraSite/calculadora_site/ui/: __init__.py  render.py  theme.py  tui_app.py
ObsidianAgent/Projects/CalculadoraSite/tests/: conftest.py  test_catalog.py  test_cli.py  test_pricing.py  test_render.py  test_reports.py  test_tui.py
ObsidianAgent/Projects/bbWebScan/: .aops-vault.toml  .gitignore  CHANGELOG.md  CLAUDE.md  NOTICE  README.md  SCRAPY_SPIDER_INDEX.md  bbwebscan.py  pyproject.toml
ObsidianAgent/Projects/bbWebScan/bbwebscan/: cli.py  config.py  doctor.py  history.py  init_profile.py  installer.py  menu.py  menu_collect.py  menu_command.py  menu_custom.py  menu_form.py  menu_profiles.py  menu_prompts.py  menu_scan.py  menu_types.py  models.py  pipeline.py  preflight.py  reporting_professional.py  runner.py  welcome.py  wordlist_builder.py
ObsidianAgent/Projects/bbWebScan/bbwebscan/stages/: amass_stage.py  jwt_tool_stage.py  kiterunner_stage.py  nuclei_stage.py  scrapy_dl_stage.py  scrapy_stage.py  sqlmap_stage.py
ObsidianAgent/Projects/bbWebScan/bbwebscan/stages/scrapy/: bbspider.py  url_downloader.py
ObsidianAgent/Projects/bbWebScan/profiles/: bbt.yaml  vswitcher-com.yaml
ObsidianAgent/Projects/bbWebScan/tests/: test_changelog.py  test_cli.py  test_cli_scrapy.py  test_config.py  test_coverage_v056_boost.py  test_coverage_v056_boost2.py  test_coverage_v056_boost3.py  test_doctor.py  test_init_profile.py  test_installer.py  test_jwt_tool_stage.py  test_menu.py  test_menu_helpers.py  test_menu_routes.py  test_menu_simplified.py  test_menu_templates.py  test_naabu_stage.py  test_pipeline.py  test_preflight.py  test_reporting_professional.py  test_retry.py  test_runner.py  test_scrapy_stage.py  test_sqlmap_stage.py  test_stages.py  test_targets.py  test_wordlist_builder.py  test_wordlist_suggest.py
ObsidianAgent/Projects/bbWebScan/tests/fixtures/: amass.txt  arjun.json  dirsearch.json  feroxbuster.json  ffuf.json  nuclei.jsonl  scrapy.jsonl  sqlmap_aggressive.json
PP1/: 01-Vol_Esfera.py  02-h20.py  03-PlanoCartesiano.py  04-Inteiros.py
PPII/: BoletimEscolar.py  Calc.py  ImpXPar.py  VLReal.py
PPIII/: FolhaSalarial.py  SistEleitoral.py  VLReal_v2.0.py
PPIV/: 01.py  04.py  05.py
PPV/: Ex02.py  Ex03.py  Ex04.py
Projects/: piramide_ascii.py
Projects/KALInit/: init.sh  (+2 more)
Revisao_Prova01/: ex4.py  ex5.py  ex6.py
Snippets/: README.md  master-bugbounty.js
blk7rch/: CLAUDE.md  README.txt  blk7rch-afk-automation.sh  pyproject.toml
blk7rch/blk7rch/: __init__.py  __main__.py  main.py
blk7rch/blk7rch/config/: __init__.py  defaults.py  loader.py  schema.py
blk7rch/blk7rch/desktop/: __init__.py  gdm.py  hyprland.py  waybar.py
blk7rch/blk7rch/installer/: __init__.py  chroot_config.py  core.py  disk_setup.py  post_install.py
blk7rch/blk7rch/profiles/: __init__.py  base.py  ids.py  pentest.py  workstation.py
blk7rch/blk7rch/security/: __init__.py  blackarch.py  ids_snort.py  ids_suricata.py  ufw.py  validation.py
blk7rch/blk7rch/tui/: __init__.py  menu.py
blk7rch/blk7rch/utils/: __init__.py  logger.py  rollback.py  run.py
blk7rch/configs/: blk7rch_default.json  blk7rch_minimal.json  blk7rch_pentest.json
blk7rch/tests/: test_config.py  test_dry_run.py
wordlists/: INDEX.md  README.md  WORDLISTS_SUMMARY.md
(+569 files in other folders)
