[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blk7rch"
version = "1.0.0"
description = "Encrypted Arch Linux Pentest Installer built on archinstall"
requires-python = ">=3.12"
dependencies = [
    "archinstall>=2.8",
]

[project.scripts]
blk7rch = "blk7rch.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["blk7rch*"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false

[tool.ruff]
line-length = 120
target-version = "py312"
