[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adv7ia-control-mesh"
version = "0.1.0"
description = "Security-first local control mesh for ADV7ia."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "pydantic>=2.11,<3.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18,<2.0",
  "ruff>=0.13,<1.0",
]

[tool.setuptools.packages.find]
include = ["adv7ia_control*"]

[tool.mypy]
strict = true
packages = ["adv7ia_control"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
