[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbwebscan"
version = "0.5.6"
description = "Scope-aware bug bounty web recon orchestrator"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8,<3.0",
  "publicsuffix2>=2.20191221",
  "PyYAML>=6.0",
  "rich>=13",
  "scrapy>=2.11",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.6",
  "types-PyYAML>=6.0",
]
cov = [
  "pytest-cov>=5.0",
]
js = [
  "scrapy-playwright>=0.0.46",
]

[tool.coverage.run]
branch = true
source = ["bbwebscan"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[project.scripts]
bbwebscan = "bbwebscan.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["bbwebscan", "tests"]

# [v0.5.3] Scrapy lacks type stubs; the spider isolates the untyped surface so
# the rest of the package stays strict-clean.
[[tool.mypy.overrides]]
module = ["scrapy", "scrapy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["bbwebscan.stages.scrapy.bbspider"]
disallow_untyped_calls = false
disallow_any_decorated = false
# Scrapy's Spider declares `custom_settings` as an Optional instance attribute,
# which conflicts with our ClassVar + per-instance override pattern. Suppress
# the resulting misc errors at the module level rather than littering the
# implementation with ignores.
disable_error_code = ["misc", "no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["bbwebscan", "bbwebscan.stages", "bbwebscan.stages.scrapy", "bbwebscan.data"]

[tool.setuptools.package-data]
"bbwebscan.data" = ["*.yml", "*.yaml"]
